VeraSandBox2016/src/objects/Evaluation__c.object
<CustomObject>
    <fields>
        <fullName>Module_Usefulness__c</fullName>
        <label>Module Usefulness</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Module</label>
        <referenceTo>Module__c</referenceTo>
        <relationshipLabel>Evaluations</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modules_Information_MI__c</fullName>
        <label>Modules Information (MI)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Most_Challenging_Session__c</fullName>
        <label>Most Challenging Session</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nomination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nomination</label>
        <referenceTo>Nomination__c</referenceTo>
        <relationshipLabel>Evaluations</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ODTBQU_Explanation__c</fullName>
        <label>ODTBQU - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ODT_Briefing_Qual_Usefulness_ODTBQU__c</fullName>
        <inlineHelpText>Rating of the quality and usefulness of the breifing received from the organisation deployed to</inlineHelpText>
        <label>ODT Briefing Qual., Usefulness (ODTBQU)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ODT_Briefing_Received__c</fullName>
        <inlineHelpText>Did the Expert receive a briefing from the organisation he/she was deployed to</inlineHelpText>
        <label>ODT Briefing Received</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oral_Follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Oral Follow-up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Comments__c</fullName>
        <label>Overall Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Evaluation__c</fullName>
        <label>Overall Evaluation</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Expert_Contribution__c</fullName>
        <label>Overall Expert Contribution</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Satisfaction__c</fullName>
        <inlineHelpText>Overall satisfaction with JRR services for this deployment</inlineHelpText>
        <label>Overall Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Satisfaction_with_Services__c</fullName>
        <label>Overall Satisfaction with Services</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PMNI_Explanation__c</fullName>
        <label>PMNI - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_Comments__c</fullName>
        <label>PO - Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PS_Comments__c</fullName>
        <label>PS - Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P_Comments__c</fullName>
        <label>P - Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Post_Training_Evaluation_Result__c</fullName>
        <formula>(VALUE(TEXT( Skill_Techniques_for_Work_STW__c ))+VALUE(TEXT( Relationships_Developed_RD__c ))+VALUE(TEXT( Skills_Techniques_for_Mission_STM__c ))+VALUE(TEXT( Modules_Information_MI__c ))+VALUE(TEXT( Training_Change_Suggestions_TCS__c )))/5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post-Training Evaluation Result</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Problem_Solving_Suggests_Solutions_PS__c</fullName>
        <label>Problem Solving/Suggests Solutions (PS)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profile_Matched_Needs_Identified_PMNI__c</fullName>
        <inlineHelpText>Level to which Expert&apos;s knowledge, skills and experience matched the needs identified by the requesting entity</inlineHelpText>
        <label>Profile Matched Needs Identified (PMNI)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Punctuality_P__c</fullName>
        <label>Punctuality (P)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RDENT_Explanation__c</fullName>
        <label>RDENT - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RD_Comments__c</fullName>
        <label>RD - Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>REF_Explanation__c</fullName>
        <label>REF - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RIDM_Explanation__c</fullName>
        <label>RIDM - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RMENT_Explanation__c</fullName>
        <label>RMENT - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RNENT_Explanation__c</fullName>
        <label>RNENT - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RRENT_Explanation__c</fullName>
        <label>RRENT - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RSENT_Explanation__c</fullName>
        <label>RSENT - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relation_Deploying_Entity_RDENT__c</fullName>
        <inlineHelpText>Rating of the relationship with the deploying entity</inlineHelpText>
        <label>Relation Deploying Entity (RDENT)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relation_Mentee_Entity_RMENT__c</fullName>
        <label>Relation Mentee Entity (RMENT)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relation_Requesting_Entity_RRENT__c</fullName>
        <inlineHelpText>Rating of the relationship with the requesting entity</inlineHelpText>
        <label>Relation Requesting Entity (RRENT)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relation_State_Entity_RSENT__c</fullName>
        <inlineHelpText>Rating of the relationship with the State entity</inlineHelpText>
        <label>Relation State Entity (RSENT)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_Nominating_Entity_RNENT__c</fullName>
        <inlineHelpText>Rating of the relationship with the nominating entity</inlineHelpText>
        <label>Relationship Nominating Entity (RNENT)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationships_Developed_RD__c</fullName>
        <label>Relationships Developed (RD)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SF_Comments__c</fullName>
        <label>SF - Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SGBV_Explanation__c</fullName>
        <inlineHelpText>Explanation and, if applicable, explanation of the extent to which Expert contributed to enhancing accountability for SGBV crimes</inlineHelpText>
        <label>SGBV Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SGBV_Perspective__c</fullName>
        <inlineHelpText>Extent to which a gender-sensitive perspective was integrated in the performance of the duties</inlineHelpText>
        <label>SGBV Perspective</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SL_Comments__c</fullName>
        <label>SL - Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SL_Explanation__c</fullName>
        <label>SL - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>STM_Comments__c</fullName>
        <label>STM - Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>STW_Comments__c</fullName>
        <label>STW - Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Security_and_Logistics_SL__c</fullName>
        <inlineHelpText>Appropriateness of security measures and logistics arranged</inlineHelpText>
        <label>Security and Logistics (SL)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sensible_to_Others_Able_to_Listen_SL__c</fullName>
        <label>Sensible to Others/Able to Listen (SL)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skill_Techniques_for_Work_STW__c</fullName>
        <label>Skill, Techniques for Work (STW)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skills_Techniques_and_Methods_STM__c</fullName>
        <label>Skills, Techniques and Methods (STM)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skills_Techniques_for_Mission_STM__c</fullName>
        <label>Skills, Techniques for Mission (STM)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Structure_and_Format_SF__c</fullName>
        <label>Structure and Format (SF)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suggestions_to_Improve_Course__c</fullName>
        <label>Suggestions to Improve Course</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TCS_Comments__c</fullName>
        <label>TCS - Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TC_Explanation__c</fullName>
        <inlineHelpText>Explanation, which modules were useful, and recommendations on changing JRR training curriculum</inlineHelpText>
        <label>TC - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TMTOR_Explanation__c</fullName>
        <label>TMTOR - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TWT_Explanation__c</fullName>
        <label>TWT - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tasks_Matched_TORs_TMTOR__c</fullName>
        <inlineHelpText>Degree to which tasks matched the terms of reference</inlineHelpText>
        <label>Tasks Matched TORs (TMTOR)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Work_Together_TWT__c</fullName>
        <inlineHelpText>Extent to which the team worked well together</inlineHelpText>
        <label>Team Work Together (TWT)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Testimonial_Comments__c</fullName>
        <label>Testimonial - Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Testimonial__c</fullName>
        <inlineHelpText>Acceptance to provide testimonial or participate in JRR presentations</inlineHelpText>
        <label>Testimonial</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Change_Suggestions_TCS__c</fullName>
        <label>Training Change Suggestions (TCS)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Course_TC__c</fullName>
        <inlineHelpText>Extent to which the training course equipped expert with knowledge and skills used in the mission</inlineHelpText>
        <label>Training Course (TC)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Evaluation_Result__c</fullName>
        <formula>(VALUE(TEXT( Course_Content_CC__c ))+VALUE(TEXT( Relationships_Developed_RD__c ))+VALUE(TEXT( Structure_and_Format_SF__c ))+VALUE(TEXT( Skills_Techniques_and_Methods_STM__c ))+VALUE(TEXT( Better_Prepared_for_Deployment_BPD__c ))+VALUE(TEXT( Information_not_Addressed_IA__c ))+VALUE(TEXT( Logistical_Support_LS__c )))/7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Evaluation Result</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Evaluations</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Evaluation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EVA-{00000}</displayFormat>
        <label>JRRID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluations</pluralLabel>
    <recordTypes>
        <fullName>EXP_COMP</fullName>
        <active>true</active>
        <label>EXP-COMP</label>
    </recordTypes>
    <recordTypes>
        <fullName>EXP_FR_IMPL</fullName>
        <active>true</active>
        <label>EXP-FR-IMPL</label>
    </recordTypes>
    <recordTypes>
        <fullName>EXP_FR_SCOP</fullName>
        <active>true</active>
        <label>EXP-FR-SCOP</label>
    </recordTypes>
    <recordTypes>
        <fullName>EXP_GEN</fullName>
        <active>true</active>
        <label>EXP-GEN</label>
    </recordTypes>
    <recordTypes>
        <fullName>EXP_INT</fullName>
        <active>true</active>
        <label>EXP-INT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Modules</fullName>
        <active>true</active>
        <description>Modules Evaluation</description>
        <label>Modules</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nominations</fullName>
        <active>true</active>
        <description>Nominations Evaluation</description>
        <label>Nominations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Post_Training</fullName>
        <active>true</active>
        <description>Post-Training Evaluation</description>
        <label>Post-Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>REQ_EXP_COMP</fullName>
        <active>true</active>
        <label>REQ-EXP-COMP</label>
    </recordTypes>
    <recordTypes>
        <fullName>REQ_EXP_FR_IMP</fullName>
        <active>true</active>
        <label>REQ-EXP-FR-IMP</label>
    </recordTypes>
    <recordTypes>
        <fullName>REQ_EXP_FR_SCOP</fullName>
        <active>true</active>
        <label>REQ-EXP-FR-SCOP</label>
    </recordTypes>
    <recordTypes>
        <fullName>REQ_EXP_GEN</fullName>
        <active>true</active>
        <label>REQ-EXP-GEN</label>
    </recordTypes>
    <recordTypes>
        <fullName>REQ_JRR_COMP</fullName>
        <active>true</active>
        <label>REQ-JRR-COMP</label>
    </recordTypes>
    <recordTypes>
        <fullName>REQ_JRR_FR_IMP</fullName>
        <active>true</active>
        <label>REQ-JRR-FR-IMP</label>
    </recordTypes>
    <recordTypes>
        <fullName>REQ_JRR_FR_SCOP</fullName>
        <active>true</active>
        <label>REQ-JRR-FR-SCOP</label>
    </recordTypes>
    <recordTypes>
        <fullName>REQ_JRR_GEN</fullName>
        <active>true</active>
        <label>REQ-JRR-GEN</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trainee</fullName>
        <active>true</active>
        <description>Trainee&apos;s Evaluation</description>
        <label>Trainee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <description>Training Evaluation</description>
        <label>Training</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>